--- a/public/global.css
+++ b/public/global.css
@@ -66,3 +66,10 @@ body {
   color: #f5f5f5;
   font-size: 24px;
 }
+
+/* Added column gap and centering for gallery */
+.gallery {
+  column-gap: var(--gap);
+  margin-left: auto;
+  margin-right: auto;
+}
